fix line highlighting clipping issue for small screens

--- a/src/styles/dracula-prismjs.css
+++ b/src/styles/dracula-prismjs.css
@@ -134,6 +134,25 @@ pre[class*="language-"] {
   border-left: 0.25em solid #a78bfa;
 }
 
+/**
+ * Add back the container background-color, border-radius, padding, margin
+ * and overflow that we removed from <pre>.
+ */
+.gatsby-highlight {
+  overflow: auto;
+}
+
+/**
+ * Remove the default PrismJS theme background-color, border-radius, margin,
+ * padding and overflow.
+ * 1. Make the element just wide enough to fit its content.
+ * 2. Always fill the visible space in .gatsby-highlight.
+ */
+.gatsby-highlight pre[class*="language-"] {
+  float: left; /* 1 */
+  min-width: 100%; /* 2 */
+}
+
 /* Command prompt style for shell codeblocks */
 .command-line-prompt > span:before {
   color: #f8f8f2;
